add wasm stub and graalvm support